Deployment/virtual services/front-end.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: test
spec:
  hosts:
    - "sut.kongtelalug.com"
  gateways:
    - public-gateway.istio-system.svc.cluster.local
  http:
    - route:
      - destination:
          host: front-end
